# occCBF-Gazebo

./: .gitignore  .gitmodules  README.md  parameter.md
.issues/: 001-robot-heading-visualization.md  002-sensor-information-unrestricted.md  003-simulation-metrics-output.md  004-yaw-control-and-sensor-filtering.md  005-boundary-reflection-issues.md  実験計画.md
src/occlusion_sim/: CMakeLists.txt  package.xml
src/occlusion_sim/analysis/: compare_experiments.py  plot_experiment.py  run_numerical_sim.py
src/occlusion_sim/launch/: experiment.launch.py  experiment_comparison.launch.py  gazebo_sim.launch.py  multi_obstacle_simulation.launch.py  mvp_simulation.launch.py  phase1_test.launch.py  simulation.launch.py  single_obstacle_simulation.launch.py  turtlebot3_simulation.launch.py
src/occlusion_sim/models/: dynamic_obstacle.sdf  moving_cylinder.sdf
src/occlusion_sim/rviz/: sensor_viz.rviz
src/occlusion_sim/scripts/: cbf_wrapper_node.py  cmd_vel_converter.py  multi_obstacle_controller.py  obstacle_controller.py  obstacle_controller_base.py  run_batch_experiment.py  scenario_obstacle_controller.py  sensor_visualizer_node.py  sim_config.py  simulation_supervisor.py  single_obstacle_controller.py
src/occlusion_sim/scripts/scenarios/: README.md  __init__.py  corner_popout.py  multi_random.py
src/occlusion_sim/urdf/: simple_holonomic_robot.urdf  simple_unicycle_robot.urdf
src/occlusion_sim/worlds/: experiment_corner.world  multi_obstacle.world  occlusion.world  simple.world
